--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
-                        <div class="d-flex card-txt">
+                        <div class="d-flex footer">
                                 <li>
                                     Toyota Supra
                                 </li>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
-                        <div class="d-flex card-txt">
+                        <div class="d-flex footer">
                             <li>
                                 Skyline-GTR R34
                             </li>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="card-body p-0">
                             <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
-                            <div class="d-flex m-0 card-txt">
+                            <div class="d-flex m-0 footer">
                                 <li>
                                     Honda NSX
                                 </li>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
-                        <div class="d-flex card-txt">
+                        <div class="d-flex footer">
                             <li>
                                 Mazda RX-7
                             </li>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
-                        <div class="d-flex card-txt">
+                        <div class="d-flex footer">
                             <li>
                                 Lancer Evo-VII
                             </li>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
-                        <div class="d-flex card-txt">
+                        <div class="d-flex footer">
                             <li>
                                 Subaru WRX
                             </li>
