teste sem sucesso1

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
-                        <div class="d-flex footer">
-                            <li>
-                                Subaru WRX
-                            </li>
-                            <li>
-                                $600.000,00
-                            </li>
-                        </div>
+                    </div>
+                    <div class="card-footer d-flex">
+                        <li>
+                            Subaru WRX
+                        </li>
+                        <li>
+                            $600.000,00
+                        </li>
                     </div>
                 </div>
             </div>
@@ -151,3 +151,12 @@ integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4B
 crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+<!-- <li>
+                                Subaru WRX
+                            </li>
+                            <li>
+                                $600.000,00
+                            </li> -->
