--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                         <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Toyota Supra
-                        </li>
-                        <li>
+                        </span>
+                        <span>
                             $1.100.000,00
-                        </li>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -60,12 +60,12 @@
                         <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Skyline-GTR R34
-                        </li>
-                        <li>
+                        </sp>
+                        <span>
                             $1.00.000,00
-                        </li>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -78,9 +78,9 @@
                         <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Honda NSX
-                        </li>
+                        </span>
                         <li>
                             $950.000,00
                         </li>
@@ -96,16 +96,16 @@
                         <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Mazda RX-7
-                        </li>
-                        <li>
+                        </span>
+                        <span>
                             $900.000,00
-                        </li>    
+                        </span>    
                     </div>
                 </div>
             </div>
-            <div class="col">    
+            <div class="col">
                 <div class="card bg-dark rounded-0 p-0 m-0 card-car">
                     <div class="card-header">
                         <img class="icone" src="./images/mitsubishib.png">
@@ -114,12 +114,12 @@
                         <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Lancer Evo-VII
-                        </li>
-                        <li>
+                        </span>
+                        <span>
                             $800.000,00
-                        </li>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -132,12 +132,12 @@
                         <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
                     </div>
                     <div class="card-footer d-flex">
-                        <li>
+                        <span>
                             Subaru WRX
-                        </li>
-                        <li>
+                        </span>
+                        <span>
                             $600.000,00
-                        </li>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -150,12 +150,3 @@ integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4B
 crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-<!-- <li>
-                                Subaru WRX
-                            </li>
-                            <li>
-                                $600.000,00
-                            </li> -->
