--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                         <span>
                             Honda NSX
                         </span>
-                        <li>
+                        <span>
                             $950.000,00
-                        </li>
+                        </span>
                     </div>
                 </div>
             </div>
